--- a/src/main/webapp/css/tdc.css
+++ b/src/main/webapp/css/tdc.css
@@ -7,18 +7,21 @@ a{cursor:pointer;}
 input[type="text"]{height:28px;}
 input[type="button"]{height:25px;border:1px solid #969696;margin-left:1px;cursor:pointer;}
 
-.container{width:1118px;}
-.page_head{width:1118px;height: 30px}
-.page_left{width:363px;float:left;border:1px solid #969696;min-height: 627px;}
-.left_title{font-size:15pt;font-weight: bold;}
+.container{width:1080px;}
+.page_head{width:1080px;height: 30px}
+.page_left{width:358px;float:left;border:1px solid #969696;min-height: 630px;}
+.left_title{font-size:15pt;font-weight: bold;padding-left: 8px;}
 
-.page_envi{width:700px;float:left;border:1px solid #000;height: 28px;}
+.page_envi{width:700px;float:left;border:1px solid #000;height: 28px;padding:0 2px 0 2px;}
+.envi_tips {margin: 4px 0 0 3px ;width: 45px;float:left;}
 .envi_edit{display: none;width:630px;}
-.page_center{width:700px;float:left;border:1px solid #000;min-height: 600px;}
+.links{margin: 4px 0 0 3px ;width:300px;float:right;}
 
-.project_edit,.project_name,.project_list{width:350px;float:left;margin:2px 0 2px 3px;}
+.page_center{width:700px;float:left;border:1px solid #000;min-height: 600px;padding:0 2px 0 2px;}
+
+.project_edit,.project_name,.project_list{width:350px;float:left;margin:2px 0 2px 2px;}
 .project_delete_link{width:30px;float:right;}
-.project_add_link{width:80px;float:right;font-size: 12pt;margin-top:5px;}
+.project_add_link{width:70px;float:right;font-size: 12pt;margin-top:5px;}
 .project_list .project_name:nth-child(3n+0){background: #93C2F5}
 .project_list .project_name:nth-child(3n+1){background: #CFD39D}
 .project_list .project_name:nth-child(3n+2){background: #F7CF9E}
@@ -58,7 +61,7 @@ input[type="button"]{height:25px;border:1px solid #969696;margin-left:1px;cursor
 .select{position:absolute;margin-top:3px; display: inline-block;width: 300px;border:1px solid #969696;}
 .select_choice{padding-right:210px;}
 .select_edit{float: right;width:20px;}
-.envi_tips {margin: 4px 0 0 3px ;width: 65px;float:left;}
+
 .option,.option_edit{position: relative;width: 298px;border-top:1px solid #000;z-index: 100;display: none;background-color: #fff;}
 .option_edit input{width:115px;}
 .option_edit label{font-size: 5pt;}
