--- a/src/main/webapp/css/tdc.css
+++ b/src/main/webapp/css/tdc.css
@@ -56,7 +56,9 @@ input[type="button"]{height:25px;border:1px solid #969696;margin-left:1px;cursor
 .tdc_title_anly_bt{border:1px solid #000;}
 .tdc_data,.tdc_action{display: none;margin-top:3px;}
 .tdc_name_value_type_title span{margin: 0 85px 0 30px;}
-.tdc_name_value_type input{margin:1px 1px 1px 0;}
+.tdc_name_value_type input{height:18px;  margin:1px 1px 1px 0;}
+.tdc_name_value_type .type{width:60px}
+/***/.tdc_info_area {max-width:680px;}
 
 .select{position:absolute;margin-top:3px; display: inline-block;width: 300px;border:1px solid #969696;}
 .select_choice{padding-right:210px;}
