--- a/src/main/webapp/css/tdc.css
+++ b/src/main/webapp/css/tdc.css
@@ -22,9 +22,11 @@ input[type="button"]{height:25px;border:1px solid #969696;margin-left:1px;cursor
 .project_edit,.project_name,.project_list{width:350px;float:left;margin:2px 0 2px 2px;}
 .project_delete_link{width:30px;float:right;}
 .project_add_link{width:70px;float:right;font-size: 12pt;margin-top:5px;}
+/**
 .project_list .project_name:nth-child(3n+0){background: #93C2F5}
 .project_list .project_name:nth-child(3n+1){background: #CFD39D}
 .project_list .project_name:nth-child(3n+2){background: #F7CF9E}
+*/
 .project_name p{height:25px; margin:8px 0 0 3px; border-bottom: 1px solid #969696;}
 .project_name a{margin-top:8px;}
 .project_name_edit,.project_name_add{margin-left:3px; width:265px;}
@@ -43,9 +45,11 @@ input[type="button"]{height:25px;border:1px solid #969696;margin-left:1px;cursor
 .function_add_link{width:33px;float:right;}
 
 .tdc_list{width:700px;display:inline-block;}
+/**
 .tdc_list .tdc_item:nth-child(3n+2){background: #93C2F5}
 .tdc_list .tdc_item:nth-child(3n+0){background: #D0D3B3}
 .tdc_list .tdc_item:nth-child(3n+1){background: #F7CF9E}
+*/
 .tdc_add{width:700px;height:30px; border-bottom: 1px solid #000;}
 .tdc_add p{height:23px;float:left;margin-top: 5px;}
 .tdc_add input{float:right;margin-top: 3px;height:25px;}
